# BBC-Launcher

./: .gitignore  .vsconfig  BBCLauncher.sln  README.md  THIRD_PARTY_NOTICES.md
docs/: BUILDING.md  MOD_DISTRIBUTION.md  PROJECT_MAP.md  TROUBLESHOOTING.md
manifests/: download-manifest.example.json
native/: README.md  xbox-gl-command-state.h
native/corewindow-probe/: App.cpp  CoreWindowProbe.vcxproj  CoreWindowProbe.vcxproj.filters  Package.MinecraftJavaTestFixes.appxmanifest  Package.appxmanifest  pch.h
native/fabric-lan-discovery/resources/: fabric.mod.json  xbox_lan_discovery.mixins.json
native/fabric-lan-discovery/src/com/minecraftxbox/lan/: LanDiscoveryPatch.java
native/fabric-lan-discovery/src/com/minecraftxbox/lan/mixin/: LanServerDetectorMixin.java  LanServerListMixin.java
native/graphics-bridge/: CMakeLists.txt  graphics_bridge.h  presentation.cpp
native/jdk-patch/out-probe/: manifest.mf
native/jdk-patch/src/: XboxPathProbe.java
native/jdk-patch/src/java/io/: WinNTFileSystem.java
native/jdk-patch/src/sun/nio/fs/: WindowsFileStore.java  WindowsLinkSupport.java  WindowsSecurity.java
native/lwjgl2-patch-agent/src/com/minecraftxbox/lwjgl2/: Lwjgl2XboxAgent.java
native/modern-lan-agent/src/com/minecraftxbox/lan/: ModernLanAgent.java
native/win-shims/: CMakeLists.txt  ole32_shim.cpp  pdh_shim.cpp
native/xbox-glfw/: CMakeLists.txt  glfw_constants_generated.h  xbox_glfw.cpp
native/xbox-glfw-research/: glfw-exports.txt
native/xbox-openal/: CMakeLists.txt  xbox_openal.cpp  xbox_openal.def
native/xbox-opengl/: CMakeLists.txt  xbox_opengl.cpp  xbox_opengl.def
native/xbox-opengl-research/: opengl32-exports.txt
scripts/: Build-EmbeddedMinecraftTestPackage.ps1  Build-FabricLanDiscoveryMod.ps1  Build-JdkPatch.ps1  Build-Lwjgl2PatchAgent.ps1  Build-MesaUwpRuntime.ps1  Build-MinecraftJavaTestFixes.ps1  Build-ModernLanAgent.ps1  Build-NativeBridge.ps1  Build-NativeCoreWindowProbePackage.ps1  Build-PublicReleaseVariants.ps1  Build-Variants.ps1  Build-XboxPackage.ps1  Generate-GlfwConstants.ps1  Get-DxilRuntime.ps1  Get-MesaUwp.ps1  Get-MinecraftFiles.ps1  Install-VisualStudioComponents.ps1  New-FabricProfile.ps1  New-ForgeProfile.ps1  New-MultiVersionPayload.ps1  New-NeoForgeProfile.ps1  New-PlaceholderAssets.ps1  New-XboxSigningCertificate.ps1  Optimize-MultiVersionPayload.ps1
src/BBCLauncher/: App.xaml  App.xaml.cs  BBCLauncher.csproj  GameHostPage.xaml  GameHostPage.xaml.cs  GraphicsProbePage.xaml  GraphicsProbePage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MicrosoftGame.config  Package.appxmanifest  ResolutionPickerPage.xaml  ResolutionPickerPage.xaml.cs  launcher.config.json
src/BBCLauncher/Configuration/: LauncherConfig.cs
src/BBCLauncher/Models/: DownloadManifest.cs  GameHostLaunchContext.cs  LaunchStage.cs  ResolutionOption.cs
src/BBCLauncher/Properties/: Default.rd.xml
src/BBCLauncher/Resources/: log4j2-xbox.xml
src/BBCLauncher/Services/: D3D12PresentationService.cs  EmbeddedJvmProbeService.cs  FileVerifier.cs  GraphicsProbeService.cs  JavaRuntimeLauncher.cs  LaunchLog.cs  LaunchOrchestrator.cs  ManifestDownloader.cs  MicrosoftAuthService.cs  NativeGraphicsBridgeService.cs  PackagedPayloadBootstrapper.cs  PathProbeService.cs  ResolutionManager.cs  RuntimeAssetStager.cs
